# Intel-8080-Emulator

./: .gitignore  8080 Emulator.sln  CMakeLists.txt  LICENSE  Makefile  Readme.md
8080 Emulator/: 8080 Emulator.vcxproj  8080 Emulator.vcxproj.filters  arithmetic.h  branch.c  branch.h  cpu.c  cpu.h  data.h  decoder.h  disasm.c  disasm.h  display.c  display.h  logic.h  main.c  special.h  time.c  time.h  ~AutoRecover.8080 Emulator.vcxproj
src/: .gitignore  CMakeLists.txt  arithmetic.c  arithmetic.h  branch.c  branch.h  cpu.c  cpu.h  data.c  data.h  decoder.c  decoder.h  disasm.c  disasm.h  logic.c  logic.h  main.c  platform.c  platform.h  special.c  special.h  time.h
src/display/: display.c  display.h  shader.c  shader.fragment  shader.h  shader.vertex
src/instructions/: arithmetic.c  arithmetic.h  branch.c  branch.h  data.c  data.h  logic.c  logic.h  special.c  special.h
src/sys/: arithmetic.c  arithmetic.h  branch.c  branch.h  cpu.c  cpu.h  data.c  data.h  decoder.c  decoder.h  disasm.c  disasm.h  logic.c  logic.h  special.c  special.h
